Added dockerPack rule creating a docker image with the current nextflow build